@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST eix-0.25.5.tar.xz 487608 SHA256 bc0ff803063e7a20ad6cd24763808f5a2b95600bf2b6525fff402e4e430606c6 SHA512 3a7898c5f320bfd52e606eb732701301c96bd63fb143c4a195343efdf4abb354fd6b20cdfa6d0a72fcb39b60bfe6f7a4fe7135c908b5464952f01f965820a7a0 WHIRLPOOL dd9d5a996506b2575754969117fce09539ecba41e925f17c330aa5ff22dd6e12d1908104000d9ce109151d8caf214c9eec46b85292456d7526ecbc4d98b91db4
 DIST eix-0.29.3.tar.xz 549636 SHA256 23b0aa7b8a4ed576318ab418b86eb85fa7858744ab61fb900aed83d2499b04d0 SHA512 ab865de8a960ad3c8745b9c6d871dfe29f378740a46919fa4521414c2444ccf9585aae8426db2a44967b5f987a2e7a9a0a09a6a8c82c071c30b520ef18e425bd WHIRLPOOL 5f1c898d359b6f4c10c9f43d278fc68be2ea26465e2eae9672e9e7dce14ce1703733873fad53f356879990ebcf69c8d1e7639bc2ef375b68a8e7d339349deb17
 DIST eix-0.29.6.tar.xz 552108 SHA256 9f028ef34a573ca6f57192ee2415e123f34e7ddd69f4310add532dbb3a7c00cf SHA512 63703c76a04819cd33ebd8cf3e6e4a456bee4a5a23bd00e91b9ded8fdb893fe789a141fb0048943421fa9ea79af7d8375696576f09318ed84fe8f992680be866 WHIRLPOOL 9ee89b491e8bbebc53f4861d070d1578410f83139b1e811b14249801e4d5ad7c660515b04ebf438c89de397a0a5a9d311bcd9c26aa67dbdf4741162bc866ac83
+DIST eix-0.30.0.tar.xz 553388 SHA256 b74c56b81809fea360a0fbfc4ea03195a91242816deaa0bc36bb0ba97df99c23 SHA512 bc2061ef43a3d182523b1c9e1adefde1743c905e8103b63a989b9fe9a0660e190a94cf5aa732682a6f61786f8879d755b9d6313fa4af5501c02d744503825be0 WHIRLPOOL b89e8bed9858fc326e23d1a6c2d1e05e639f5101a3eeff2ba0facb55d42feb035b2d9b7d0f2e80bc09cab1e99fb1efc3a6631518c294f43b1256b1863e03a01d
 EBUILD eix-0.25.5.ebuild 2238 SHA256 fe36c5512ae1bfce2232c6cf48f1d6c6b1ae8151fb62c25792d0ffc776e99215 SHA512 d906dd05701d9f628eeb2442d129a87cf0e714a6da4577e24b2b1236505ee6aeec7ed1b48ebbf827e488f962e937c169e6548a7103de6e8a44213404547c14da WHIRLPOOL 5e86e4fce86386b9892afad2f4e0eb1328d26195ca65849b7b786706b02850e56ff14c2dc13a10264a1cc26a8b432a950718eb0bfdf01ae79c074acc3574164f
 EBUILD eix-0.29.3.ebuild 2536 SHA256 a497fdfaaa7eaa578e4e684466fb52f9177784b34870521b84a0b44dfbf1fba9 SHA512 f149eb02c0c2080eac80f2e94df06f98798145955aee5cc51090390187e0056456e601e0cd24ddcefe656bef6dc3b6bbba599c899880c3f06d991c768d6eb2bf WHIRLPOOL 60aaa1d195cdf2b24dfb18b7d514e788cf7aa39bf8ad012aed2f0d084a426e8c65136e7c8012a19b490822d4ef0ac2e3c5f97992a4c69d8679176a149f772959
 EBUILD eix-0.29.6.ebuild 2524 SHA256 6286bb05eac4e88f35596e3c7a58f6cb8d7830a6f64acf6032bc76f988cf4dda SHA512 4c84336e1821674c5679bf933eff9a624466c114f4c78acaea9024f6b5f7bddbf3f310b79861721344fdd79624d0f26fd397e49a54b2863cd8b9220c0098316f WHIRLPOOL accc497a83cd89c987497f9d1efcb5e48374103f616b9db4c65e3f49c999b1298a40ac8cb194c620ebf4a6ef721808c75545fa5b0442abdefc5640a19dfb884e
-MISC ChangeLog 59518 SHA256 43c8b45f6d6b8aa027c5877795a7c7595b7a314fbc39c9306ed8106f4c1f2b7a SHA512 7f1674dd90d5df17ce622776e3a5f39daaeede564550274fefc0f227c4add0f80216349ac4fb98968079db2bdd99f8450dab3892b7622ce1cf2ad61bf6872502 WHIRLPOOL 438efb5bd867f9d0632a21955d2de41f08926d37438f4ef7bfe4a8f5bc535f272150601535f23cbbef319abbd1f082c41367a05354ea5c30492c3f2fcc42451b
+EBUILD eix-0.30.0.ebuild 2449 SHA256 c4108d592a73082e0450e0f2d13b72b37e552a5e9eed4d5851338db4ae51010e SHA512 b9ac2a4f1033696c0b9de70c1889e37a1de66b08e16b4e34b327f3e3e883ac95dce1e931b57036dbbeeeef771f6b032abd5a6106154e33594cd4b2c4ab075cc2 WHIRLPOOL e8813c3b5955ba3a2736d07d83e5f1d4791d09888ba97dc9ea7d11b521619396b768b8e2e6e75472e0f3be795b2be42c6e891b4d1bc25197844ff582899a0414
+MISC ChangeLog 59710 SHA256 830ce4513f1d5f3b4d5849c847ca932fc9493c6a872896e75ca9c76ac7aea7f7 SHA512 3b02125fb58759f54371233c626e464e1f2fd2a73e4acc67379077a2dfe3f695b6dbd1c10e18538f0063b0ff6265e67d8a3222a060067a7d662a3fa6028582bf WHIRLPOOL 6eb01267f7cb021481c5f775ea869fa9ddaecac39abf7c080d4380b9b3de1e7fd53bb837667bc791f749322c3918289d82e53b237836a2ef298cd82be6082c70
 MISC metadata.xml 2148 SHA256 3096745b6cd5b28eec451e36d20c462db7839305400b7bb2b97541928903b24b SHA512 c51492e50ce35180c7f8190196d77efc83d256b980425c1a15d7bcfb74e6f89cff3207d998fe83b0c3cff52a3cd157f4afb0d913f93e3324172bb0ccce76999b WHIRLPOOL f7736a90e7669c71fe946d32efd7f1a59a97a89f7df5cbffca38acccc07bd63b393fec1794004ad8405b27ff7d87278060587f0f1a1e400939d2546a241a3eee
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlJ/ja4ACgkQ2ugaI38ACPBJUgD/f02h8TbKcTXSYAWEHTwFqVoV
+eZ74phpXeEtbZ0pbp/IA/0F0HKIkEGQrZIzHZeDZLuyqG5L8zehxAzf+uSkJsGGj
+=j1w6
+-----END PGP SIGNATURE-----
