@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst prepare setup
+DEPEND=sqlite? ( >=dev-db/sqlite-3 ) nls? ( virtual/libintl ) app-arch/xz-utils nls? ( sys-devel/gettext )
+DESCRIPTION=Search and query ebuilds, portage incl. local settings, ext. overlays, version changes, and more
+EAPI=5
+HOMEPAGE=http://eix.berlios.de
+IUSE=debug +dep doc nls optimization security strong-optimization strong-security sqlite swap-remote tools linguas_de linguas_ru
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=sqlite? ( >=dev-db/sqlite-3 ) nls? ( virtual/libintl ) app-shells/push
+SLOT=0
+SRC_URI=mirror://berlios/eix/eix-0.30.0.tar.xz
+_eclasses_=bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	4878e7f88afc0ba0866ac112190b0fd4	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=73703a6bd0bbf0d8c1c8e3f9240382fc
