@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-qt/qtgui:4 doc? ( !<media-libs/coin-3.1.3[doc] ) svg? ( dev-qt/qtsvg:4 ) userland_GNU? ( >=sys-apps/coreutils-8.5 )
+DEPEND=dev-qt/designer:4 dev-qt/qtgui:4 doc? ( !<media-libs/coin-3.1.3[doc] ) svg? ( dev-qt/qtsvg:4 ) userland_GNU? ( >=sys-apps/coreutils-8.5 )
 DESCRIPTION=2D plotting library for Qt4
 EAPI=5
 HOMEPAGE=http://qwt.sourceforge.net/
 IUSE=doc examples static-libs svg
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-macos
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-macos
 LICENSE=qwt
-RDEPEND=dev-qt/qtgui:4 doc? ( !<media-libs/coin-3.1.3[doc] ) svg? ( dev-qt/qtsvg:4 )
+RDEPEND=dev-qt/designer:4 dev-qt/qtgui:4 doc? ( !<media-libs/coin-3.1.3[doc] ) svg? ( dev-qt/qtsvg:4 )
 SLOT=5
 SRC_URI=mirror://sourceforge/qwt/qwt-5.2.3.tar.bz2
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	qt4-r2	ce0c9abfee272185e03ab73f09f5fd69	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=8a72a96e7df401b70f8dce0476d76694
+_md5_=f2d6ca1064ba376d8a86f4e3295ca5ec
