@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX qwt-5.2.3-install_qt.patch 963 SHA256 e497e1bdbba7700b28e7cbe99faa196d76115bcfad588495a41f0a05672b5740 SHA512 e4bd767fd0942dbac0a585f4c6b588faa99f1f38d02fe8db6c3be181c7a7c6955abc874df916ed446dde537f6090ca81610ae49ba55766033bd8bd801808e8e9 WHIRLPOOL 1723c57b40061938158977f5ab183caab26b71ed610b5eaef8f90c53596753089719f3a7d345ccc6c6feec86f7ae8f50c7c3154d37bb5b4502a84880d1167d9b
 AUX qwt-6.0.2-invalid-read.patch 9447 SHA256 d063b36170af2c2ca12c44fa283cc1b387b97ce6c53f02f101db45ebed975b43 SHA512 e9912ec60d062bad89ecb74c0342815f8c7b351318df88120e7510e44224f52a1c89e8ab2bcafd6d8c418a7a3e67347b159d174d417cbebf4fa3377191d0f201 WHIRLPOOL 0a71af42f61e605f03c648dd21b74a3b3e6864ca956c9adf84eafe7d98ca6aec49ec23316137ea60a9d0c078f06ec39ac6ae3e02fc217b56b0d3f3f4608564f2
 DIST qwt-5.2.1.tar.bz2 1926453 SHA256 e2b8bb755404cb3dc99e61f3e2d7262152193488f5fbe88524eb698e11ac569f SHA512 9c434a268c2599602462a5d77688b41627f62e117a7cb9a0c0c80dccb196b0bc00a04fbc18670905e2a1d7de9e343126b8105d8852ad85e2ea6de0c93fe65d5e WHIRLPOOL d859eb7afe3c79e937a9cd6bfa48ba74292e6edd6a5dd8094ded2b369be6b3be30c11b28a1f21b903626d5a85a33431e2f2f98e17c6e30cf429889f620aadf72
@@ -7,12 +10,29 @@ DIST qwt-6.0.2.tar.bz2 2688469 SHA256 2e699ac426d96aa14c86e4b7199d6b849c7f650109
 DIST qwt-6.1.0.tar.bz2 3468850 SHA256 a7e3d9f1db917d186a973c5f04a316bc9607c7c35794d7a16de323aba5e17402 SHA512 5c5c8309debad1829cb59cf1c941b66306153a25b2027d674a2cfa5a150bfdd3823a1b6ed9df3b326bacc1dc7d1b6c301b1fd5bcebf7ff51cfa74b76a55f30bc WHIRLPOOL 590e0078c724c1df7e9f2705f8be08973b8ea8f8aa338f1e782946360dd88c04a6b0003971eb93a6321bdcc778d73d651ee3d4c512d318d846f69a9484963964
 EBUILD qwt-5.2.1.ebuild 1737 SHA256 d19d5e287f1f2507d219a840f7b0c45f8dcce7f34d5a405d71ffc951e446be7d SHA512 360da020c7ea8a6e0d9425c0dfc72937e869bacc04915ccd3dfea7125fc883d44f9ede7596342d4ad94146b839a58874db066e15dae7b453a0480a5104274e3e WHIRLPOOL 7edf0afd7cd91bc83688f27879336a8b55ee5d706667ad9560e51c1af8490ec509ce6fa00305d1d2b88e6cc5a23a8e8634212a463266b5da6ea368013498fb50
 EBUILD qwt-5.2.3-r1.ebuild 2326 SHA256 12c84570add3830a3813a8c64b44a1eb372f74f5c132d327da2466b01bf7491e SHA512 64e4486f151f7ca908f5a7e08be699304bdb5b334aa6202111090bdeec56429f20ca6a4e6096d6d5b14d7b9d3b47e1090e1ef4c399ad3b59849af047e95a5ce7 WHIRLPOOL 826aeb2f559cafb1068bb8720646b3b6bdefd46b626503875245d1d8c435d59279180738bfcab062da8e906eb093e12ff9518b471ed49a5a6dbfa6c66e985d71
-EBUILD qwt-5.2.3-r2.ebuild 2669 SHA256 40212987c9c557c288a9763eccb08c8b32602bd2541f7451f520d8bef39ae961 SHA512 c96f28d88af75b2f55e2c290c573d2d347b9c26d670d3f3c56cc9d1b10b8b3d8c6284e144ae1a5d518d78266e5e44f2c16d7a4298241723110c93f4c7fad4dff WHIRLPOOL aa9a002c2c448ef41264e7494cdcf74be947f28a98543fd0ca13cfba17296e2c2eef33cb112e64d6ce3ab17375e5e77e633e467df5587c856fa40403af9fc3fb
+EBUILD qwt-5.2.3-r2.ebuild 2677 SHA256 5a15cf6286b9fa5011619c8855799b0e2b7d8b7b93163d84ecc68717d41fdf37 SHA512 7ccdd8ba872c0320117e3edd042f742caf3561d0d428607c7615f38b861f815d6dbc0ad0a1b54c769cf27258fbe011ec4d6a8a0cbd4de4f1490a74e35f3600e6 WHIRLPOOL 2f4ae6b4f40f0373b6ee5f01b1879d816c341802f66164a8dad09102099f24595ccb1ddf20bd39f33a368de1bd8ad761ece1b177baf08e80caef0972f183c0fe
 EBUILD qwt-5.2.3.ebuild 2125 SHA256 53f2ea3d2f302367f5611aa7ebabef89be4495da6684a246dec857d0253cc2ed SHA512 b6e818c597cbb2d178fcebfea7a980f2ce962eee9ef0985f5574ae865ce8fd4cf5fadba46da2824c90d759a79a8ecd30432a1c8ac999cb58283354a93aa2f209 WHIRLPOOL 0a7ba9f48fc2b4124d5bc4603237ece4716ff0ee79be0b14300ab67a1003c403d966da477eac6aca278fcc9139fd45cf5323c24e7496d3397ddb530fde5fb6bd
 EBUILD qwt-6.0.0.ebuild 2242 SHA256 a65665ab54e1e6db4c2d7d5a3f7688e07e5f3699bee51ba8b8ff9ca5eb673f5b SHA512 96f9e353dec7319375ad07b49a56164e1bf3236a4f9d1fe1f03beb20a6689c9c2d606a283b43f9a670bff963d4b9feac90e005c5f6cee1a26447d9a9992e1de7 WHIRLPOOL 362a3b10fb1fad2598ed5ec3aee6f78fbc0f48a997b3aff0dde84c59568e9d663b54435e2f0cac7b71c6f93974444eb37ced896daf2f2c2e80b3a3e201d5aab8
-EBUILD qwt-6.0.2-r1.ebuild 2861 SHA256 d9aa1824e0340f1234d41ce4ad6dd726d04b46ff1ea4147dbdee933750d2d765 SHA512 9c50fedabdabcae9511de018ef6ad2a258f7732650bfbae4caac01ddb81c57af095e2bba54de73857fe649a3bb4b69e89e69ec5fb1affd4e7cc9074f44ec59f6 WHIRLPOOL 7278a5a66a8be21eb1cb062e847f2ce3481e2e11c9fdb599adc19063c37e505508e1972f3918a2ce3f97bb5f7bf53668141d6bab3c9da9519af0b201516f053c
+EBUILD qwt-6.0.2-r1.ebuild 3577 SHA256 22b33402a5e416e467ba6f30362ed9263b0f90e4f525a4d2ebfa3f6286133d6f SHA512 832f981edf238047fa82f36445022dacb14c2aa39518fbfc3a884e6d4d02628a0466ece44dee91f7cd7dc5394e8e1c8fe04b31a07353aed85eeb88d89c92649a WHIRLPOOL 2efcc01fce053ed741fb1a48eecde74c163da7ce86c4dd9cf1f13614b7327ba6da20254bd958914cb5729b023eb72b4ceb15b205677800c2848f789ad7aba570
 EBUILD qwt-6.0.2-r2.ebuild 3039 SHA256 161085f3bb636b009c0bdd30102bf4420f5c2b6677c2244739199e14db2de72b SHA512 4e659609d0c499fc603e0a1b33aa315f0626cd1986f90ea3232ab2d23315bc8d0800617b6aa12dcba2a2374f257ccf5b9a6a79bec1b485adf591a7ad5335c5da WHIRLPOOL e4fcc86965fcd35863da1b9a59f82942db25902ea548cc67fb91a521b827623e4425992d318c21400e29e8c0bdc8fcee67cd79ed19e7d0cb9a024652c8a7b6e7
 EBUILD qwt-6.0.2.ebuild 2559 SHA256 04c6dd9f29e1fa7cbac94335a2eab3f4b3e3b875bebb35d75e64950c29219ee3 SHA512 46896ebfb91336dc21e4be349870f8faa770cc2be0ea93fe73092c374f688eba2000dd387bb3f1527f1fbafb76b0605b9a3c19e300b902d19cd014f83583b664 WHIRLPOOL 70e7081c9eb7337afa269b823defc4a834b4e4308e0493997f97edd0fcb21337dfb99ead950f9bbedd6e11402a4dbbf9d196b245651aca8805a8e17ed9d7eed1
 EBUILD qwt-6.1.0.ebuild 3063 SHA256 e6f54bc2ec79e6b9800491b5978ed4e9c9d904c7b1b077d9ccca42c4f66952ed SHA512 440a2a8d88c01b6adeea794ed0996027b1ce312c215cc2021b6be0b6965dfdc3f6da49d2aad00835ff55a015f535b0bac974a22a3b90cf1e024fad3a93bf3026 WHIRLPOOL fe40eea510a3040d1f1d677e900c65092ed98c4e85488af95f387c590c60268a2a8dd256c552cf10656fe5fba0f4db2ca9695b29a8ccfde9870ea7eea42eab4b
-MISC ChangeLog 15183 SHA256 0aa3c36933251b1475b3f8a4a41ecc053824f2adcaf2a98c9e7ff5c61e7be6a9 SHA512 220f2ebc9a07a581b0db62db20ebda83131ec346c5cd6b39d0561758b5d79ccc4887059e631ba6137a938c5ac40751fc94593432d3e15661f22c7f028c1c931c WHIRLPOOL f51b5b9b261bd0b470b9d3cc541aa99873912184045733314f52b977447b3882b0677cba4e5086a00756ea17045716cc6cdeebf704e700eebe4c26271f5142cc
+MISC ChangeLog 15318 SHA256 02d72b252be629a345107faa8c36e1837c308c2f323ecb9bbd01482fbee1274b SHA512 13f797b30a2b2e6514f4210e0cb92b549c05bdf6428037f00a820ce1a1905c720f97a91fb96607cbd11d41f543c6d708711b25dbd4598cbf3f9b0ad455f9acaf WHIRLPOOL 2d10f1bc59aaf79f12cd74d1c74b95d5c4c38d4530a4022d82fd5b339a05f38b350f7a6599b81c9f233b7e9958fdaba0fbcb300e8aa10fa61bbc4345b75311c8
 MISC metadata.xml 615 SHA256 143e1e3cfb374536ae429ca941b781a34060906c17144a72f95c6717c9f9dc91 SHA512 dce756ddd462905a17ff1504eb3615cf652e2da0dae7678689d5880940601a4ecce8dbc2808feb6de9061fbf602c8d8a19d0f17a3ea7e0ec4af38688a9a6d466 WHIRLPOOL e89713d285d300cd40c9691b3e36581d300fc7e5877d8c0c6e0013ea74e761354416e44a5137b2c234b20b2e6fa9e759e6127c9b182628679ce418d695b120de
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQIcBAEBCgAGBQJSf4xkAAoJELnU8jG9FVirzJ0P+gNrCTUjKaTIOLpyNzwxpyFz
+Z0vKbEuYLGSN0VbqSg13QrqkWPP1iuk0H6bSJOE3K3QClEUvtY414R+xYFBVBh6N
+aZNzeH9Nq53r+k32EJ/GbrOY5RrA6MJOzQw9BytAnlhuruOG781w4g9uncXJaXkV
+kR7hgQuztvRAeWHKlb47xuUjKa4xrApf8uJBboyOuZWQVPoiHFQzI/RWG0EZbzEE
+TktdGd3I/fLwczniAuGoJ59dRPNQQzXD4D/N6pVHjfKiYZtEdLBhOII5JTAZVm98
+tDXM4rSVF1bO3RlZMPlLa5VqmPSss0QhuWiMXR+hpAziku0ZnBmdarePlf2pA2Hb
+tVb+EAWRK7/YuKRvwCAW0DtBwhBsNhT6QlpEB/EvzP9p3QrydBBD6MuNli7Aup2/
+eTHcpfbncVW2QSKQhg14qV/qzZt+dweqxcxZVCcDuOdzmirex9tmbEylnz9Q+PDk
+F73E0ZDW+q3LAIdRyiI7gor1+4cOCg26TEM5zL9cETns2pN571l6vtIy4DWNBVPn
+rW+EGksRyrtWsnk++la8BiVcCNjf97xwDbbyIQud6r05+mploNFSEM7bUyPU9giW
+h16Xns5TVUaLtngxSQ6n+xQVz6SDzZhqDsyBDI7p/s5RtcCbV88gDsygmH6cZEIz
+lYeECWZYKeu6HYiUAX8c
+=vf5z
+-----END PGP SIGNATURE-----
