@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qwt
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.113 2013/07/10 07:26:17 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.114 2013/11/10 13:38:43 jlec Exp $
+
+  10 Nov 2013; Justin Lecher <jlec@gentoo.org> qwt-5.2.3-r2.ebuild,
+  qwt-6.0.2-r1.ebuild:
+  Add missing dep on dev-qt/designer, #490926
 
   10 Jul 2013; Patrick Lauer <patrick@gentoo.org> qwt-6.1.0.ebuild:
   Fixing qtgui/designer deps for qt-4.8.5
